<?xml version="1.0" encoding="utf-8"?>
  <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      android:id="@+id/rl_loginactivity_top"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:background="#ffffff"
      tools:context="Activity.LoginActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="329dp"
        android:scaleType="fitXY"
        android:src="@mipmap/login1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="270dp"
        android:gravity="center"
        android:orientation="vertical">

      <LinearLayout
          android:id="@+id/ll_loginactivity_two"
          android:layout_width="match_parent"
          android:layout_height="200dp"
          android:layout_marginLeft="18dp"
          android:layout_marginRight="18dp"
          android:background="@drawable/shape_login_form"
          android:gravity="center"
          android:orientation="vertical"
          android:paddingLeft="43dp"
          android:paddingRight="31dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

          <ImageView
              android:layout_width="25dp"
              android:layout_height="25dp"
              android:src="@mipmap/account" />

          <EditText
              android:id="@+id/et_loginactivity_username"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_marginLeft="20dp"
              android:background="@null"
              android:hint="@string/number_hint"
              android:textColor="#000000"
              android:inputType="textNoSuggestions"
              android:textColorHint="#bcbcbc"
              android:textSize="18sp" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="23dp"
            android:layout_marginBottom="23dp"
            android:background="#e8e7e7" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

          <ImageView
              android:layout_width="25dp"
              android:layout_height="25dp"
              android:src="@mipmap/pwd" />

          <EditText
              android:id="@+id/et_loginactivity_password"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_marginLeft="20dp"
              android:background="@null"
              android:inputType="textPassword"
              android:hint="@string/pwd_hint"
              android:textColor="#000000"
              android:textColorHint="#bcbcbc"
              android:textSize="18sp" />
        </LinearLayout>

      </LinearLayout>
      <LinearLayout
          android:layout_width="350dp"
          android:layout_height="wrap_content"
          android:gravity="center"
          android:layout_marginTop="10dp">
          <TextView
              android:id="@+id/tv_loginactivity_forget"
              android:text="确认忘记密码？"
              android:textColor="#FB9D9D"
              android:gravity="left"
              android:layout_width="0dp"
              android:layout_height="wrap_content"
              android:layout_weight="3"
              />
          <TextView
              android:layout_width="0dp"
              android:layout_height="match_parent"
              android:layout_weight="3"/>
          <TextView
              android:id="@+id/tv_loginactivity_check"
              android:layout_width="0dp"
              android:layout_weight="3"
              android:layout_height="wrap_content"
              android:gravity="right"
              android:text="短信验证码登录"
              android:textColor="#F04E5152" />
      </LinearLayout>
      <Button
          android:id="@+id/bt_loginactivity_login"
          android:layout_width="300dp"
          android:layout_height="55dp"
          android:layout_marginLeft="18dp"
          android:layout_marginTop="40dp"
          android:layout_marginRight="18dp"
          android:background="@drawable/shape_big_login_btn"
          android:text="@string/login"
          android:textColor="#ffffff"
          android:gravity="center"
          android:textSize="24sp"
          android:onClick="onClick"
          tools:ignore="OnClick" />
      <TextView
          android:id="@+id/tv_loginactivity_register"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="还没有账号？去注册"
          android:textColor="#F63E6F87"
          android:textSize="12dp"
          android:layout_marginTop="10dp"
          android:clickable="true"
          android:onClick="onClick"
          />
      <TextView
          android:id="@+id/tv_loginactivity_else"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_centerInParent="true"
          android:layout_marginVertical="30dp"
          android:text="————第三方登录————"
          android:textColor="#B3B3B3"
          android:gravity="center"
          />
    </LinearLayout>
  </RelativeLayout>